project now more Okta specific; updated Spring Boot; renamed column user to scope_user

--- a/dale-auth-server/src/test/resources/application.properties
+++ b/dale-auth-server/src/test/resources/application.properties
@@ -8,6 +8,5 @@ spring.datasource.password=sa
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.hbm2ddl.auto=create
 
-okta.audience=http://localhost:8081/api
-
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-123456.okta.com/oauth2/default
+okta.oauth2.issuer=https://dev-123456.okta.com/oauth2/default
+okta.oauth2.audience=api://default
