--- a/dale-auth-server/pom.xml
+++ b/dale-auth-server/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.3</version>
+		<version>2.7.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.iiplabs.dale</groupId>
@@ -19,8 +19,9 @@
 
 		<commons-codec.version>1.15</commons-codec.version>
 		<commons-text.version>1.9</commons-text.version>
-		<io.version>2.8.0</io.version>
-		<guava.version>30.1-jre</guava.version>
+		<io.version>2.11.0</io.version>
+		<guava.version>31.1-jre</guava.version>
+		<okta.spring.version>2.1.5</okta.spring.version>
 		<reactor.version>1.0.1.RELEASE</reactor.version>
 	</properties>
 
@@ -103,6 +104,11 @@
 			<groupId>org.springframework.security</groupId>
       <artifactId>spring-security-config</artifactId>
 		</dependency>
+  	<dependency>
+      <groupId>com.okta.spring</groupId>
+      <artifactId>okta-spring-boot-starter</artifactId>
+      <version>${okta.spring.version}</version>
+    </dependency>
 
 		<!-- WebClient -->
 		<dependency>
@@ -149,16 +155,6 @@
 	    <artifactId>commons-text</artifactId>
 	    <version>${commons-text.version}</version>
 	  </dependency>
-
-    <!-- EhCache -->
-    <dependency>
-      <groupId>javax.cache</groupId>
-      <artifactId>cache-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.ehcache</groupId>
-      <artifactId>ehcache</artifactId>
-    </dependency>
 	</dependencies>
 
 	<build>
