--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,11 +28,11 @@ services:
       - '${SERVER_PORT_AUTH}:8081'
     environment: 
       SERVER_PORT_AUTH: ${SERVER_PORT_AUTH}
-      AUDIENCE: ${AUDIENCE}
-      ISSUER_URI: ${ISSUER_URI}
       DB_URL: ${DB_URL_AUTH}
       DB_USER: ${DB_USER_AUTH}
       DB_PASSWORD: ${DB_PASSWORD_AUTH}
+      OKTA_OAUTH2_ISSUER: ${ISSUER_URI}
+      OKTA_OAUTH2_AUDIENCE: ${AUDIENCE}
     depends_on:
       - dale-auth-db
 
